# Kokoro-FastAPI

./: pyproject.toml
api/src/core/: paths.py
api/src/inference/: kmodel_module.py  kokoro.py  kokoro_pipeline_module.py  kokoro_v1.py
api/src/routers/: development.py
api/src/services/: tts_service.py
examples/: requirements.txt
