[tool.poetry]
name = "kokoro-fastapi"
version = "0.1.0"
description = "FastAPI app for Kokoro voice synthesis"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
soundfile = "^0.12.1"
av = "^11.0.0"
pydub = "^0.25.1"
scipy = "^1.13.0"
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.34.0"
aiofiles = "^23.2.1"
aiohttp = "3.9.5"
loguru = "^0.7.2"
openai = ">=1.0.0"
torch = "^2.1.2+cpu"
text2num = "^2.5.1"
tiktoken = "^0.8.0"
spacy = "3.8.5"
pydantic-settings = "^2.2.1"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




